# switcheroo

./: README.md  build.py  pyproject.toml  setup.py
src/what-the-proc/: __init__.py
src/what_the_proc/: loader.py  main.py  procer.py  procer_load.py
src/what_the_proc/ext/: procer.c
src/what_the_proc/ext/include/: procer.h
tests/: __init__.py  test_procer.py  test_procer_load.py
