[tool.poetry]
name = "what-the-proc"
version = "0.1.0"
description = "Tool to collect, process and analyze attention, hyperactivity behavior of a computer user."
authors = ["beyonddream <43626691+beyonddream@users.noreply.github.com>"]
license = "MIT license"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
