[tool.poetry]
name = "what-the-proc"
version = "0.1.0"
description = "Tool to collect, process and analyze attention, hyperactivity behavior of a computer user."
authors = ["Arun a.k.a beyonddream"]
license = "MIT"
readme = "README.md"
build = "build.py"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23"
structlog = "^23.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
